feat(sp): debug logging feature

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "اختر ممثلًا جديدًا",
   "nanogpt_subtitle": "جميع النماذج الأحدث (GPT-4 ، Claude). \\ nno اشتراك ، ادفع مع Crypto.",
   "narrow": "ضيق",
-  "new_tag": "جديد",
   "new_first_wallet_text": "الحفاظ على سلامة التشفير الخاص بك هو قطعة من الكعكة",
   "new_node_testing": "تجربة العقدة الجديدة",
   "new_subaddress_create": "إنشاء",
   "new_subaddress_label_name": "تسمية",
   "new_subaddress_title": "عنوان جديد",
+  "new_tag": "جديد",
   "new_template": "قالب جديد",
   "new_transactions_notifications": "إرسال إشعارات حول المعاملات الجديدة",
   "new_wallet": "إنشاء محفظة جديدة",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "حدد المدفوعات الصامتة دائمًا المسح الضوئي",
   "silent_payments_disclaimer": "العناوين الجديدة ليست هويات جديدة. إنها إعادة استخدام هوية موجودة مع ملصق مختلف.",
   "silent_payments_display_card": "عرض بطاقة المدفوعات الصامتة",
+  "silent_payments_logs": "سجلات الدفع الصامتة",
   "silent_payments_scan_from_date": "فحص من التاريخ",
   "silent_payments_scan_from_date_or_blockheight": "يرجى إدخال ارتفاع الكتلة الذي تريد بدء المسح الضوئي للمدفوعات الصامتة الواردة ، أو استخدام التاريخ بدلاً من ذلك. يمكنك اختيار ما إذا كانت المحفظة تواصل مسح كل كتلة ، أو تتحقق فقط من الارتفاع المحدد.",
   "silent_payments_scan_from_height": "فحص من ارتفاع الكتلة",
