--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Изберете нов представител",
   "nanogpt_subtitle": "Всички най-нови модели (GPT-4, Claude). \\ Nno абонамент, платете с Crypto.",
   "narrow": "Тесен",
-  "new_tag": "Ново",
   "new_first_wallet_text": "Запазването на криптовалутата ви е парче торта",
   "new_node_testing": "Тестване на нов node",
   "new_subaddress_create": "Създаване",
   "new_subaddress_label_name": "Име на Label",
   "new_subaddress_title": "Нов адрес",
+  "new_tag": "Ново",
   "new_template": "Нов шаблон",
   "new_transactions_notifications": "Изпратете известия за нови транзакции",
   "new_wallet": "Нов портфейл",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Задайте мълчаливи плащания винаги сканиране",
   "silent_payments_disclaimer": "Новите адреси не са нови идентичности. Това е повторна употреба на съществуваща идентичност с различен етикет.",
   "silent_payments_display_card": "Показване на безшумни плащания карта",
+  "silent_payments_logs": "Мълчаливи дневници за плащане",
   "silent_payments_scan_from_date": "Сканиране от дата",
   "silent_payments_scan_from_date_or_blockheight": "Моля, въведете височината на блока, която искате да започнете да сканирате за входящи безшумни плащания, или вместо това използвайте датата. Можете да изберете дали портфейлът продължава да сканира всеки блок или проверява само определената височина.",
   "silent_payments_scan_from_height": "Сканиране от височината на блока",
