--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Vyberte nového zástupce",
   "nanogpt_subtitle": "Všechny nejnovější modely (GPT-4, Claude). \\ Nno předplatné, plaťte krypto.",
   "narrow": "Úzký",
-  "new_tag": "Nový",
   "new_first_wallet_text": "Udržování svého kryptového v bezpečí je kus dortu",
   "new_node_testing": "Testování nového uzlu",
   "new_subaddress_create": "Vytvořit",
   "new_subaddress_label_name": "Popisek",
   "new_subaddress_title": "Nová adresa",
+  "new_tag": "Nový",
   "new_template": "Nová šablona",
   "new_transactions_notifications": "Zašlete oznámení o nových transakcích",
   "new_wallet": "Nová peněženka",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Nastavit tiché platby vždy skenování",
   "silent_payments_disclaimer": "Nové adresy nejsou nové identity. Je to opětovné použití existující identity s jiným štítkem.",
   "silent_payments_display_card": "Zobrazit kartu Silent Payments",
+  "silent_payments_logs": "Protokoly tichých plateb",
   "silent_payments_scan_from_date": "Skenovat od data",
   "silent_payments_scan_from_date_or_blockheight": "Zadejte výšku bloku, kterou chcete začít skenovat, zda jsou přicházející tiché platby, nebo místo toho použijte datum. Můžete si vybrat, zda peněženka pokračuje v skenování každého bloku nebo zkontroluje pouze zadanou výšku.",
   "silent_payments_scan_from_height": "Skenování z výšky bloku",
