--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Wählen Sie einen neuen Vertreter aus",
   "nanogpt_subtitle": "Alle neuesten Modelle (GPT-4, Claude).",
   "narrow": "Eng",
-  "new_tag": "Neu",
   "new_first_wallet_text": "Wenn Sie Ihren Krypto schützen, ist ein Kinderspiel",
   "new_node_testing": "Neuen Knoten testen",
   "new_subaddress_create": "Erstellen",
   "new_subaddress_label_name": "Bezeichnung",
   "new_subaddress_title": "Neue Adresse",
+  "new_tag": "Neu",
   "new_template": "neue Vorlage",
   "new_transactions_notifications": "Senden Sie Benachrichtigungen über neue Transaktionen",
   "new_wallet": "Neue Wallet",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "Setzen Sie Silent Payments auf immer scannen",
   "silent_payments_disclaimer": "Neue Adressen sind keine neuen Identitäten. Es ist eine Wiederverwendung einer bestehenden Identität mit einem anderen Etikett.",
   "silent_payments_display_card": "Silent Payments Karte anzeigen",
+  "silent_payments_logs": "Stille Zahlungsprotokolle",
   "silent_payments_scan_from_date": "Scan ab Datum",
   "silent_payments_scan_from_date_or_blockheight": "Bitte geben Sie die Blockhöhe ein, die Sie für eingehende Silent Payments scannen möchten, oder verwenden Sie stattdessen das Datum. Sie können wählen, ob die Wallet jeden Block scannt oder nur die angegebene Höhe überprüft.",
   "silent_payments_scan_from_height": "Scan aus der Blockhöhe scannen",
