--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Pick a new representative",
   "nanogpt_subtitle": "All the newest models (GPT-4, Claude).\\nNo subscription, pay with crypto.",
   "narrow": "Narrow",
-  "new_tag": "New",
   "new_first_wallet_text": "Keeping your crypto safe is a piece of cake",
   "new_node_testing": "New node testing",
   "new_subaddress_create": "Create",
   "new_subaddress_label_name": "Label name",
   "new_subaddress_title": "New address",
+  "new_tag": "New",
   "new_template": "New Template",
   "new_transactions_notifications": "Send notifications about new transactions",
   "new_wallet": "New Wallet",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "Set Silent Payments always scanning",
   "silent_payments_disclaimer": "New addresses are not new identities. It is a re-use of an existing identity with a different label.",
   "silent_payments_display_card": "Show Silent Payments card",
+  "silent_payments_logs": "Silent Payment Logs",
   "silent_payments_scan_from_date": "Scan from date",
   "silent_payments_scan_from_date_or_blockheight": "Please enter the block height you want to start scanning for incoming Silent Payments or use the date instead. You can choose if the wallet continues scanning every block, or checks only the specified height.",
   "silent_payments_scan_from_height": "Scan from block height",
