--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Choisissez un nouveau représentant",
   "nanogpt_subtitle": "Tous les modèles les plus récents (GPT-4, Claude).\nPas d'abonnement, payez avec vos crypto-monnaies.",
   "narrow": "Rédruit",
-  "new_tag": "Nouveau",
   "new_first_wallet_text": "Garder vos crypto-monnaies en sécurité est un jeu d'enfant.",
   "new_node_testing": "Test du nouveau nœud",
   "new_subaddress_create": "Créer",
   "new_subaddress_label_name": "Nom",
   "new_subaddress_title": "Nouvelle adresse",
+  "new_tag": "Nouveau",
   "new_template": "Nouveau Modèle",
   "new_transactions_notifications": "Envoyer des notifications sur les nouvelles transactions",
   "new_wallet": "Nouveau Portefeuille (Wallet)",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Définir les paiements silencieux toujours à la scanne",
   "silent_payments_disclaimer": "Les nouvelles adresses ne sont pas de nouvelles identités. Il s'agit d'une réutilisation d'une identité existante avec une étiquette différente.",
   "silent_payments_display_card": "Afficher la carte de paiement silencieuse",
+  "silent_payments_logs": "Journaux de paiement silencieux",
   "silent_payments_scan_from_date": "Analyser à partir de la date",
   "silent_payments_scan_from_date_or_blockheight": "Veuillez saisir la hauteur du bloc que vous souhaitez commencer à scanner pour les paiements silencieux entrants, ou utilisez la date à la place. Vous pouvez choisir si le portefeuille continue de numériser chaque bloc ou ne vérifie que la hauteur spécifiée.",
   "silent_payments_scan_from_height": "Scan à partir de la hauteur du bloc",
