--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Dauki sabon wakili",
   "nanogpt_subtitle": "Duk sabbin samfuran (GPT-4, CLODE). \\ NNO biyan kuɗi, biya tare da crypto.",
   "narrow": "kunkuntar",
-  "new_tag": "Sabo",
   "new_first_wallet_text": "Tsayawa kayatar da lafiya",
   "new_node_testing": "Sabbin gwajin kumburi",
   "new_subaddress_create": "Ƙirƙiri",
   "new_subaddress_label_name": "Lakabin suna",
   "new_subaddress_title": "Adireshin sabuwa",
+  "new_tag": "Sabo",
   "new_template": "Sabon Samfura",
   "new_transactions_notifications": "Aika sanarwa game da sababbin ma'amaloli",
   "new_wallet": "Sabuwar Wallet",
@@ -867,6 +867,7 @@
   "silent_payments_always_scan": "Saita biya na shiru koyaushe",
   "silent_payments_disclaimer": "Sabbin adiresoshin ba sabon tsari bane. Wannan shine sake amfani da asalin asalin tare da wata alama daban.",
   "silent_payments_display_card": "Nuna katin silent",
+  "silent_payments_logs": "Silent na biyan kuɗi",
   "silent_payments_scan_from_date": "Scan daga kwanan wata",
   "silent_payments_scan_from_date_or_blockheight": "Da fatan za a shigar da toshe wurin da kake son fara bincika don biyan silins mai shigowa, ko, yi amfani da kwanan wata. Zaka iya zabar idan walat ɗin ya ci gaba da bincika kowane toshe, ko duba tsinkaye da aka ƙayyade.",
   "silent_payments_scan_from_height": "Scan daga tsayin daka",
