--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Odaberite novog predstavnika",
   "nanogpt_subtitle": "Svi najnoviji modeli (GPT-4, Claude). \\ NNO pretplata, plaćajte kripto.",
   "narrow": "Usko",
-  "new_tag": "Novi",
   "new_first_wallet_text": "Čuvanje kriptovaluta je komad torte",
   "new_node_testing": "Provjera novog nodea",
   "new_subaddress_create": "Izradi",
   "new_subaddress_label_name": "Oznaka",
   "new_subaddress_title": "Nova adresa",
+  "new_tag": "Novi",
   "new_template": "novi predložak",
   "new_transactions_notifications": "Pošaljite obavijesti o novim transakcijama",
   "new_wallet": "Novi novčanik",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Postavite tiho plaćanje uvijek skeniranje",
   "silent_payments_disclaimer": "Nove adrese nisu novi identiteti. To je ponovna upotreba postojećeg identiteta s drugom oznakom.",
   "silent_payments_display_card": "Prikaži karticu tihih plaćanja",
+  "silent_payments_logs": "Tripis tihih plaćanja",
   "silent_payments_scan_from_date": "Skeniranje iz datuma",
   "silent_payments_scan_from_date_or_blockheight": "Unesite visinu bloka koju želite započeti skeniranje za dolazna tiha plaćanja ili umjesto toga upotrijebite datum. Možete odabrati da li novčanik nastavlja skenirati svaki blok ili provjerava samo navedenu visinu.",
   "silent_payments_scan_from_height": "Skeniranje s visine bloka",
