--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Ընտրեք նոր ներկայացուցիչ",
   "nanogpt_subtitle": "Բոլոր ամենանոր մոդելներ (GPT-4, Claude).\\nԱռանց բաժանորդագրության, վճարեք կրիպտոարժույթով",
   "narrow": "Նեղ",
-  "new_tag": "Նոր",
   "new_first_wallet_text": "Ձեր ծպտյալ անվտանգ պահելը տորթի մի կտոր է",
   "new_node_testing": "Նոր հանգույցի փորձարկում",
   "new_subaddress_create": "Ստեղծել",
   "new_subaddress_label_name": "Պիտակի անուն",
   "new_subaddress_title": "Նոր հասցե",
+  "new_tag": "Նոր",
   "new_template": "Նոր նմուշ",
   "new_transactions_notifications": "Ուղարկեք ծանուցումներ նոր գործարքների վերաբերյալ",
   "new_wallet": "Նոր դրամապանակ",
@@ -863,6 +863,7 @@
   "silent_payments_always_scan": "Միացնել Լուռ Վճարումներ մշտական սկանավորումը",
   "silent_payments_disclaimer": "Նոր հասցեները նոր ինքնություն չեն։ Դա այլ պիտակով գոյություն ունեցող ինքնության վերագործածում է",
   "silent_payments_display_card": "Ցուցադրել Լուռ Վճարումներ քարտը",
+  "silent_payments_logs": "Լուռ վճարման տեղեկամատյաններ",
   "silent_payments_scan_from_date": "Սկանավորել ամսաթվից",
   "silent_payments_scan_from_date_or_blockheight": "Խնդրում ենք մուտքագրել բլոկի բարձրությունը, որտեղից դուք ցանկանում եք սկսել սկանավորել մուտքային Լուռ Վճարումները կամ տեղափոխել ամսաթվի փոխարեն։ Դուք կարող եք ընտրել, արդյոք դրամապանակը շարունակելու է սկանավորել ամեն բլոկ կամ ստուգել միայն սահմանված բարձրությունը",
   "silent_payments_scan_from_height": "Բլոկի բարձրությունից սկանավորել",
