--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Pilih perwakilan baru",
   "nanogpt_subtitle": "Semua model terbaru (GPT-4, Claude). \\ Nno langganan, bayar dengan crypto.",
   "narrow": "Sempit",
-  "new_tag": "Baru",
   "new_first_wallet_text": "Menjaga crypto Anda aman adalah sepotong kue",
   "new_node_testing": "Pengujian node baru",
   "new_subaddress_create": "Buat",
   "new_subaddress_label_name": "Nama label",
   "new_subaddress_title": "Alamat baru",
+  "new_tag": "Baru",
   "new_template": "Template Baru",
   "new_transactions_notifications": "Kirim pemberitahuan tentang transaksi baru",
   "new_wallet": "Dompet Baru",
@@ -868,6 +868,7 @@
   "silent_payments_always_scan": "Tetapkan pembayaran diam selalu pemindaian",
   "silent_payments_disclaimer": "Alamat baru bukanlah identitas baru. Ini adalah penggunaan kembali identitas yang ada dengan label yang berbeda.",
   "silent_payments_display_card": "Tunjukkan kartu pembayaran diam",
+  "silent_payments_logs": "Log pembayaran diam",
   "silent_payments_scan_from_date": "Pindai dari tanggal",
   "silent_payments_scan_from_date_or_blockheight": "Harap masukkan ketinggian blok yang ingin Anda mulai pemindaian untuk pembayaran diam yang masuk, atau, gunakan tanggal sebagai gantinya. Anda dapat memilih jika dompet terus memindai setiap blok, atau memeriksa hanya ketinggian yang ditentukan.",
   "silent_payments_scan_from_height": "Pindai dari Tinggi Blok",
