--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Scegli un nuovo rappresentante",
   "nanogpt_subtitle": "Tutti i modelli più recenti (GPT-4, Claude). Nessun abbonamento, paga con cripto.",
   "narrow": "Stretto",
-  "new_tag": "Nuovo",
   "new_first_wallet_text": "Mantenere la tua criptovaluta è un gioco da ragazzi",
   "new_node_testing": "Test novo nodo",
   "new_subaddress_create": "Crea",
   "new_subaddress_label_name": "Nome etichetta",
   "new_subaddress_title": "Nuovo indirizzo",
+  "new_tag": "Nuovo",
   "new_template": "Nuovo modello",
   "new_transactions_notifications": "Invia notifiche su nuove transazioni",
   "new_wallet": "Nuovo portafoglio",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "Impostare la scansione perpetua di Silent Payments",
   "silent_payments_disclaimer": "I nuovi indirizzi non sono nuove identità. È un riutilizzo di un'identità esistente con un'etichetta diversa.",
   "silent_payments_display_card": "Mostra la carta di Silent Payments",
+  "silent_payments_logs": "Registri di pagamento silenziosi",
   "silent_payments_scan_from_date": "Scansionare dalla data",
   "silent_payments_scan_from_date_or_blockheight": "Inserisci l'altezza del blocco da cui si desidera iniziare la scansione per i pagamenti Silent Payments in arrivo, o utilizza la data. Puoi scegliere se il portafoglio continua a scansionare ogni blocco o controlla solo l'altezza specificata.",
   "silent_payments_scan_from_height": "Scansione dall'altezza del blocco",
