--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "အသစ်တစ်ခုကိုရွေးပါ",
   "nanogpt_subtitle": "အားလုံးနောက်ဆုံးပေါ်မော်ဒယ်များ (GPT-4, Claude) ။ \\ nno subscription, crypto နှင့်အတူပေးဆောင်။",
   "narrow": "ကျဉ်းသော",
-  "new_tag": "သစ်သော",
   "new_first_wallet_text": "သင်၏ Crypto Safe ကိုလုံခြုံအောင်ပြုလုပ်ခြင်းသည်ကိတ်မုန့်တစ်မျိုးဖြစ်သည်",
   "new_node_testing": "နှာခေါင်း အသစ်စမ်းသပ်ခြင်း။",
   "new_subaddress_create": "ဖန်တီးပါ။",
   "new_subaddress_label_name": "အညွှန်းအမည်",
   "new_subaddress_title": "လိပ်စာအသစ်",
+  "new_tag": "သစ်သော",
   "new_template": "ပုံစံအသစ်",
   "new_transactions_notifications": "အသစ်သောအရောင်းအဝယ်အကြောင်းသတိပေးချက်များပေးပို့ပါ",
   "new_wallet": "ပိုက်ဆံအိတ်အသစ်",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "အမြဲတမ်း scanning အမြဲ scanning",
   "silent_payments_disclaimer": "လိပ်စာအသစ်များသည်အထောက်အထားအသစ်များမဟုတ်ပါ။ ၎င်းသည်ကွဲပြားခြားနားသောတံဆိပ်ဖြင့်ရှိပြီးသားဝိသေသလက်ခဏာကိုပြန်လည်အသုံးပြုခြင်းဖြစ်သည်။",
   "silent_payments_display_card": "အသံတိတ်ငွေပေးချေမှုကဒ်ကိုပြပါ",
+  "silent_payments_logs": "အသံတိတ်ငွေပေးချေမှုမှတ်တမ်းများ",
   "silent_payments_scan_from_date": "ရက်စွဲမှစကင်ဖတ်ပါ",
   "silent_payments_scan_from_date_or_blockheight": "ကျေးဇူးပြု. သင်ဝင်လာသောအသံတိတ်ငွေပေးချေမှုအတွက်သင်စကင်ဖတ်စစ်ဆေးလိုသည့်အမြင့်ကိုဖြည့်ပါ။ သို့မဟုတ်နေ့စွဲကိုသုံးပါ။ Wallet သည်လုပ်ကွက်တိုင်းကိုဆက်လက်စကင်ဖတ်စစ်ဆေးပါကသို့မဟုတ်သတ်မှတ်ထားသောအမြင့်ကိုသာစစ်ဆေးပါကသင်ရွေးချယ်နိုင်သည်။",
   "silent_payments_scan_from_height": "ပိတ်ပင်တားဆီးမှုအမြင့်ကနေ scan",
