--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Kies een nieuwe vertegenwoordiger",
   "nanogpt_subtitle": "Alle nieuwste modellen (GPT-4, Claude). \\ Nno-abonnement, betalen met crypto.",
   "narrow": "Smal",
-  "new_tag": "Nieuw",
   "new_first_wallet_text": "Je crypto veilig houden is een fluitje van een cent",
   "new_node_testing": "Nieuwe knooppunttest",
   "new_subaddress_create": "Creëren",
   "new_subaddress_label_name": "Label naam",
   "new_subaddress_title": "Nieuw adres",
+  "new_tag": "Nieuw",
   "new_template": "Nieuwe sjabloon",
   "new_transactions_notifications": "Stuur meldingen over nieuwe transacties",
   "new_wallet": "Nieuwe portemonnee",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Stel stille betalingen in het scannen",
   "silent_payments_disclaimer": "Nieuwe adressen zijn geen nieuwe identiteiten. Het is een hergebruik van een bestaande identiteit met een ander label.",
   "silent_payments_display_card": "Toon stille betalingskaart",
+  "silent_payments_logs": "Stille betalingslogboeken",
   "silent_payments_scan_from_date": "Scan vanaf datum",
   "silent_payments_scan_from_date_or_blockheight": "Voer de blokhoogte in die u wilt beginnen met scannen op inkomende stille betalingen, of gebruik in plaats daarvan de datum. U kunt kiezen of de portemonnee elk blok blijft scannen of alleen de opgegeven hoogte controleert.",
   "silent_payments_scan_from_height": "Scan van blokhoogte",
