--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Wybierz nowego przedstawiciela",
   "nanogpt_subtitle": "Wszystkie najnowsze modele (GPT-4, Claude). \\ Nno subskrypcja, płacą za pomocą kryptografii.",
   "narrow": "Wąski",
-  "new_tag": "Nowy",
   "new_first_wallet_text": "Zachowanie bezpieczeństwa kryptograficznego jest kawałkiem ciasta",
   "new_node_testing": "Testowanie nowych węzłów",
   "new_subaddress_create": "Stwórz",
   "new_subaddress_label_name": "Etykieta nazwy adresu",
   "new_subaddress_title": "Nowy adres",
+  "new_tag": "Nowy",
   "new_template": "Nowy szablon",
   "new_transactions_notifications": "Wyślij powiadomienia o nowych transakcjach",
   "new_wallet": "Nowy portfel",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Włącz ciągłe skanowanie Silent Payments",
   "silent_payments_disclaimer": "Nowe adresy nie są nową tożsamością. Jest to ponowne wykorzystanie istniejącej tożsamości z inną etykietą.",
   "silent_payments_display_card": "Pokaż kartę Silent Payments",
+  "silent_payments_logs": "Ciche dzienniki płatności",
   "silent_payments_scan_from_date": "Skanuj z daty",
   "silent_payments_scan_from_date_or_blockheight": "Wprowadź wysokość bloku, którą chcesz rozpocząć skanowanie w poszukiwaniu cichej płatności lub zamiast tego skorzystaj z daty. Możesz wybrać, czy portfel kontynuuje skanowanie każdego bloku, lub sprawdza tylko określoną wysokość.",
   "silent_payments_scan_from_height": "Skanuj z wysokości bloku",
