--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -523,12 +523,12 @@
   "nano_pick_new_rep": "Escolha um novo representante",
   "nanogpt_subtitle": "Todos os modelos mais recentes (GPT-4, Claude). \\nSem assinatura, pague com criptomoeda.",
   "narrow": "Estreito",
-  "new_tag": "Novo",
   "new_first_wallet_text": "Manter sua cripto segura é um pedaço de bolo",
   "new_node_testing": "Teste de novo nó",
   "new_subaddress_create": "Criar",
   "new_subaddress_label_name": "Nome",
   "new_subaddress_title": "Novo endereço",
+  "new_tag": "Novo",
   "new_template": "Novo modelo",
   "new_transactions_notifications": "Envie notificações sobre novas transações",
   "new_wallet": "Nova carteira",
@@ -867,6 +867,7 @@
   "silent_payments_always_scan": "Defina pagamentos silenciosos sempre escaneando",
   "silent_payments_disclaimer": "Novos endereços não são novas identidades. É uma reutilização de uma identidade existente com um rótulo diferente.",
   "silent_payments_display_card": "Mostrar cartão de pagamento silencioso",
+  "silent_payments_logs": "Toras de pagamento silenciosas",
   "silent_payments_scan_from_date": "Escanear a partir da data",
   "silent_payments_scan_from_date_or_blockheight": "Por favor, insira a altura do bloco que deseja iniciar o escaneamento para obter pagamentos silenciosos ou use a data. Você pode escolher se a carteira continua escaneando cada bloco ou verifica apenas a altura especificada.",
   "silent_payments_scan_from_height": "Escanear a partir da altura do bloco",
