--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "เลือกตัวแทนใหม่",
   "nanogpt_subtitle": "รุ่นใหม่ล่าสุดทั้งหมด (GPT-4, Claude). การสมัครสมาชิก \\ nno, จ่ายด้วย crypto",
   "narrow": "แคบ",
-  "new_tag": "ใหม่",
   "new_first_wallet_text": "การรักษา crypto ของคุณให้ปลอดภัยเป็นเค้กชิ้นหนึ่ง",
   "new_node_testing": "การทดสอบโหนดใหม่",
   "new_subaddress_create": "สร้าง",
   "new_subaddress_label_name": "ชื่อป้ายกำกับ",
   "new_subaddress_title": "ที่อยู่ใหม่",
+  "new_tag": "ใหม่",
   "new_template": "แม่แบบใหม่",
   "new_transactions_notifications": "ส่งการแจ้งเตือนเกี่ยวกับธุรกรรมใหม่",
   "new_wallet": "กระเป๋าใหม่",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "ตั้งค่าการชำระเงินแบบเงียบเสมอ",
   "silent_payments_disclaimer": "ที่อยู่ใหม่ไม่ใช่ตัวตนใหม่ มันเป็นการใช้ซ้ำของตัวตนที่มีอยู่ด้วยฉลากที่แตกต่างกัน",
   "silent_payments_display_card": "แสดงบัตร Silent Payments",
+  "silent_payments_logs": "บันทึกการชำระเงินแบบเงียบ",
   "silent_payments_scan_from_date": "สแกนตั้งแต่วันที่",
   "silent_payments_scan_from_date_or_blockheight": "โปรดป้อนความสูงของบล็อกที่คุณต้องการเริ่มการสแกนสำหรับการชำระเงินแบบเงียบ ๆ หรือใช้วันที่แทน คุณสามารถเลือกได้ว่ากระเป๋าเงินยังคงสแกนทุกบล็อกหรือตรวจสอบความสูงที่ระบุเท่านั้น",
   "silent_payments_scan_from_height": "สแกนจากความสูงของบล็อก",
