--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Pumili ng isang bagong representative",
   "nanogpt_subtitle": "Ang lahat ng mga pinakabagong modelo (GPT-4, Claude). \nNo subscription, magbayad gamit ang crypto.",
   "narrow": "Makitid",
-  "new_tag": "Bago",
   "new_first_wallet_text": "Ang pagpapanatiling ligtas sa iyong crypto ay isang piraso ng cake",
   "new_node_testing": "Bagong node testing",
   "new_subaddress_create": "Lumikha",
   "new_subaddress_label_name": "Pangalan ng label",
   "new_subaddress_title": "Bagong address",
+  "new_tag": "Bago",
   "new_template": "Bagong Template",
   "new_transactions_notifications": "Magpadala ng mga abiso tungkol sa mga bagong transaksyon",
   "new_wallet": "Bagong Wallet",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Itakda ang mga tahimik na pagbabayad na laging nag-scan",
   "silent_payments_disclaimer": "Ang mga bagong address ay hindi mga bagong pagkakakilanlan. Ito ay isang muling paggamit ng isang umiiral na pagkakakilanlan na may ibang label.",
   "silent_payments_display_card": "Ipakita ang Silent Payment Card",
+  "silent_payments_logs": "Tahimik na mga log ng pagbabayad",
   "silent_payments_scan_from_date": "I-scan mula sa petsa",
   "silent_payments_scan_from_date_or_blockheight": "Mangyaring ipasok ang block height na gusto mong simulan ang pag-scan para sa papasok na tahimik na pagbabayad, o, gamitin ang petsa sa halip. Maaari kang pumili kung ang wallet ay patuloy na pag-scan sa bawat bloke, o suriin lamang ang tinukoy na taas.",
   "silent_payments_scan_from_height": "I-scan mula sa block height",
