--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Yeni bir temsilci seçin",
   "nanogpt_subtitle": "En yeni modeller (GPT-4, Claude). \\ Nno aboneliği, kripto ile ödeme yapın.",
   "narrow": "Dar",
-  "new_tag": "Yeni",
   "new_first_wallet_text": "Kripto'nuzu güvende tutmak bir parça kek",
   "new_node_testing": "Yeni düğüm test ediliyor",
   "new_subaddress_create": "Oluştur",
   "new_subaddress_label_name": "Etiket ismi",
   "new_subaddress_title": "Yeni adres",
+  "new_tag": "Yeni",
   "new_template": "Yeni Şablon",
   "new_transactions_notifications": "Yeni işlemler hakkında bildirimler gönderin",
   "new_wallet": "Yeni Cüzdan",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "Sessiz ödemeleri her zaman tarama ayarlayın",
   "silent_payments_disclaimer": "Yeni adresler yeni kimlikler değildir. Farklı bir etikete sahip mevcut bir kimliğin yeniden kullanımıdır.",
   "silent_payments_display_card": "Sessiz Ödeme Kartı Göster",
+  "silent_payments_logs": "Sessiz ödeme günlükleri",
   "silent_payments_scan_from_date": "Tarihten tarama",
   "silent_payments_scan_from_date_or_blockheight": "Lütfen gelen sessiz ödemeler için taramaya başlamak istediğiniz blok yüksekliğini girin veya bunun yerine tarihi kullanın. Cüzdanın her bloğu taramaya devam edip etmediğini veya yalnızca belirtilen yüksekliği kontrol edip etmediğini seçebilirsiniz.",
   "silent_payments_scan_from_height": "Blok yüksekliğinden tarama",
