--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Виберіть нового представника",
   "nanogpt_subtitle": "Усі найновіші моделі (GPT-4, Claude). \\ Nno підписка, оплата криптовалютою.",
   "narrow": "вузькі",
-  "new_tag": "Новачок",
   "new_first_wallet_text": "Зберігання вашої криптовалюти це просто як шматок торта",
   "new_node_testing": "Тестування нового вузла",
   "new_subaddress_create": "Створити",
   "new_subaddress_label_name": "Ім'я",
   "new_subaddress_title": "Нова адреса",
+  "new_tag": "Новачок",
   "new_template": "Новий шаблон",
   "new_transactions_notifications": "Надішліть сповіщення про нові транзакції",
   "new_wallet": "Новий гаманець",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "Встановити мовчазні платежі завжди сканувати",
   "silent_payments_disclaimer": "Нові адреси - це не нові ідентичності. Це повторне використання існуючої ідентичності з іншою етикеткою.",
   "silent_payments_display_card": "Покажіть безшумну карту платежів",
+  "silent_payments_logs": "Мовчазні журнали оплати",
   "silent_payments_scan_from_date": "Сканувати з дати",
   "silent_payments_scan_from_date_or_blockheight": "Введіть висоту блоку, яку ви хочете почати сканувати для вхідних мовчазних платежів, або скористайтеся датою замість цього. Ви можете вибрати, якщо гаманець продовжує сканувати кожен блок, або перевіряє лише вказану висоту.",
   "silent_payments_scan_from_height": "Сканування від висоти блоку",
