--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "ایک نیا نمائندہ منتخب کریں",
   "nanogpt_subtitle": "تمام تازہ ترین ماڈل (GPT-4 ، کلاڈ)۔ n n no سبسکرپشن ، کریپٹو کے ساتھ ادائیگی کریں۔",
   "narrow": "تنگ",
-  "new_tag": "نیا",
   "new_first_wallet_text": "اپنے کریپٹو کو محفوظ رکھنا کیک کا ایک ٹکڑا ہے",
   "new_node_testing": "نیا نوڈ ٹیسٹنگ",
   "new_subaddress_create": "بنانا",
   "new_subaddress_label_name": "لیبل کا نام",
   "new_subaddress_title": "نیا پتہ",
+  "new_tag": "نیا",
   "new_template": "نیا سانچہ",
   "new_transactions_notifications": "نئے لین دین کے بارے میں اطلاعات بھیجیں",
   "new_wallet": "نیا پرس",
@@ -867,6 +867,7 @@
   "silent_payments_always_scan": "خاموش ادائیگی ہمیشہ اسکیننگ کریں",
   "silent_payments_disclaimer": "نئے پتے نئی شناخت نہیں ہیں۔ یہ ایک مختلف لیبل کے ساتھ موجودہ شناخت کا دوبارہ استعمال ہے۔",
   "silent_payments_display_card": "خاموش ادائیگی کارڈ دکھائیں",
+  "silent_payments_logs": "خاموش ادائیگی کے نوشتہ جات",
   "silent_payments_scan_from_date": "تاریخ سے اسکین کریں",
   "silent_payments_scan_from_date_or_blockheight": "براہ کرم بلاک اونچائی میں داخل ہوں جس سے آپ آنے والی خاموش ادائیگیوں کے لئے اسکیننگ شروع کرنا چاہتے ہیں ، یا اس کے بجائے تاریخ کا استعمال کریں۔ آپ یہ منتخب کرسکتے ہیں کہ اگر پرس ہر بلاک کو اسکیننگ جاری رکھے ہوئے ہے ، یا صرف مخصوص اونچائی کی جانچ پڑتال کرتا ہے۔",
   "silent_payments_scan_from_height": "بلاک اونچائی سے اسکین کریں",
