--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -521,12 +521,12 @@
   "nano_pick_new_rep": "Chọn đại diện mới",
   "nanogpt_subtitle": "Tất cả các mẫu mới nhất (GPT-4, Claude).\\nKhông cần đăng ký, thanh toán bằng tiền điện tử.",
   "narrow": "Hẹp",
-  "new_tag": "Mới",
   "new_first_wallet_text": "Giữ tiền điện tử của bạn an toàn là một miếng bánh",
   "new_node_testing": "Đang thử nghiệm nút mới",
   "new_subaddress_create": "Tạo",
   "new_subaddress_label_name": "Tên nhãn",
   "new_subaddress_title": "Địa chỉ mới",
+  "new_tag": "Mới",
   "new_template": "Mẫu mới",
   "new_transactions_notifications": "Gửi thông báo về các giao dịch mới",
   "new_wallet": "Ví mới",
@@ -862,6 +862,7 @@
   "silent_payments_always_scan": "Đặt Thanh toán im lặng luôn quét",
   "silent_payments_disclaimer": "Địa chỉ mới không phải là danh tính mới. Đây là việc tái sử dụng một danh tính hiện có với nhãn khác.",
   "silent_payments_display_card": "Hiển thị thẻ Thanh toán im lặng",
+  "silent_payments_logs": "Nhật ký thanh toán im lặng",
   "silent_payments_scan_from_date": "Quét từ ngày",
   "silent_payments_scan_from_date_or_blockheight": "Vui lòng nhập chiều cao khối bạn muốn bắt đầu quét cho các thanh toán im lặng đến, hoặc, sử dụng ngày thay thế. Bạn có thể chọn nếu ví tiếp tục quét mỗi khối, hoặc chỉ kiểm tra chiều cao đã chỉ định.",
   "silent_payments_scan_from_height": "Quét từ chiều cao khối",
