--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -523,12 +523,12 @@
   "nano_pick_new_rep": "Mu aṣoju tuntun kan",
   "nanogpt_subtitle": "Gbogbo awọn awoṣe tuntun (GPT-4, Claude). \\ Nno alabapin kan, sanwo pẹlu Crypto.",
   "narrow": "Taara",
-  "new_tag": "Tuntun",
   "new_first_wallet_text": "Tọju ẹrọ ti o ni aabo rẹ jẹ nkan ti akara oyinbo kan",
   "new_node_testing": "A ń dán apẹka títun wò",
   "new_subaddress_create": "Ṣe é",
   "new_subaddress_label_name": "Orúkọ",
   "new_subaddress_title": "Àdírẹ́sì títun",
+  "new_tag": "Tuntun",
   "new_template": "Àwòṣe títun",
   "new_transactions_notifications": "Firanṣẹ awọn iwifunni nipa awọn iṣowo tuntun",
   "new_wallet": "Àpamọ́wọ́ títun",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "Ṣeto awọn sisanwo ipalọlọ nigbagbogbo n ṣatunṣe",
   "silent_payments_disclaimer": "Awọn adirẹsi tuntun kii ṣe awọn idanimọ tuntun. O jẹ yiyan ti idanimọ ti o wa pẹlu aami oriṣiriṣi.",
   "silent_payments_display_card": "Ṣafihan kaadi isanwo ti o dakẹ",
+  "silent_payments_logs": "Awọn ipe isanwo ti ipalọlọ",
   "silent_payments_scan_from_date": "Scan lati ọjọ",
   "silent_payments_scan_from_date_or_blockheight": "Jọwọ tẹ giga idibo ti o fẹ bẹrẹ ọlọjẹ fun awọn sisanwo ipalọlọ, tabi, lo ọjọ dipo. O le yan ti apamọwọ naa tẹsiwaju nṣapẹẹrẹ gbogbo bulọọki, tabi ṣayẹwo nikan giga ti o sọ tẹlẹ.",
   "silent_payments_scan_from_height": "Scan lati Iga Iga",
