--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "选择新代表",
   "nanogpt_subtitle": "所有最新型号（GPT-4，Claude）。\\ nno订阅，用加密货币付款。",
   "narrow": "狭窄的",
-  "new_tag": "新的",
   "new_first_wallet_text": "保持加密货币是一件小菜一碟",
   "new_node_testing": "新节点测试",
   "new_subaddress_create": "创建",
   "new_subaddress_label_name": "标签名称",
   "new_subaddress_title": "新地址",
+  "new_tag": "新的",
   "new_template": "新模板",
   "new_transactions_notifications": "发送有关新交易的通知",
   "new_wallet": "新钱包",
@@ -865,6 +865,7 @@
   "silent_payments_always_scan": "设置无声付款总是扫描",
   "silent_payments_disclaimer": "新地址不是新的身份。这是重复使用具有不同标签的现有身份。",
   "silent_payments_display_card": "显示无声支付卡",
+  "silent_payments_logs": "无声付款日志",
   "silent_payments_scan_from_date": "从日期开始扫描",
   "silent_payments_scan_from_date_or_blockheight": "请输入您要开始扫描输入静音付款的块高度，或者使用日期。您可以选择钱包是否继续扫描每个块，或仅检查指定的高度。",
   "silent_payments_scan_from_height": "从块高度扫描",
