--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Elija un nuevo representante",
   "nanogpt_subtitle": "Todos los modelos más nuevos (GPT-4, Claude). \\nSin suscripción, pague con cripto.",
   "narrow": "Angosto",
-  "new_tag": "Nuevo",
   "new_first_wallet_text": "Mantener su criptografía a salvo es un pedazo de pastel",
   "new_node_testing": "Prueba nuevos nodos",
   "new_subaddress_create": "Crear",
   "new_subaddress_label_name": "Nombre de etiqueta",
   "new_subaddress_title": "Nueva direccion",
+  "new_tag": "Nuevo",
   "new_template": "Nueva plantilla",
   "new_transactions_notifications": "Enviar notificaciones sobre nuevas transacciones",
   "new_wallet": "Nueva billetera",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "Establecer pagos silenciosos siempre escaneando",
   "silent_payments_disclaimer": "Las nuevas direcciones no son nuevas identidades. Es una reutilización de una identidad existente con una etiqueta diferente.",
   "silent_payments_display_card": "Mostrar tarjeta de pagos silenciosos",
+  "silent_payments_logs": "Registros de pago silenciosos",
   "silent_payments_scan_from_date": "Escanear desde la fecha",
   "silent_payments_scan_from_date_or_blockheight": "Ingresa la altura de bloque que desea comenzar a escanear para pagos silenciosos entrantes, o usa la fecha en su lugar. Puedes elegir si la billetera continúa escaneando cada bloque, o verifica solo la altura especificada.",
   "silent_payments_scan_from_height": "Escanear desde la altura de bloque específico",
