--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "एक नया प्रतिनिधि चुनें",
   "nanogpt_subtitle": "सभी नवीनतम मॉडल (GPT-4, क्लाउड)। \\ nno सदस्यता, क्रिप्टो के साथ भुगतान करें।",
   "narrow": "सँकरा",
-  "new_tag": "नया",
   "new_first_wallet_text": "अपने क्रिप्टो को सुरक्षित रखना केक का एक टुकड़ा है",
   "new_node_testing": "नई नोड परीक्षण",
   "new_subaddress_create": "सर्जन करना",
   "new_subaddress_label_name": "लेबल का नाम",
   "new_subaddress_title": "नया पता",
+  "new_tag": "नया",
   "new_template": "नया टेम्पलेट",
   "new_transactions_notifications": "नए लेनदेन के बारे में सूचनाएं भेजें",
   "new_wallet": "नया बटुआ",
@@ -598,8 +598,8 @@
   "payjoin_unavailable_sheet_title": "Payjoin अनुपलब्ध क्यों है?",
   "payment_id": "भुगतान ID: ",
   "payment_made_easy": "भुगतान आसान किया गया",
-  "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
   "payment_was_received": "आपका भुगतान प्राप्त हुआ था।",
+  "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
   "payments": "भुगतान",
   "pending": " (अपूर्ण)",
   "percentageOf": "${amount} का",
@@ -867,6 +867,7 @@
   "silent_payments_always_scan": "मूक भुगतान हमेशा स्कैनिंग सेट करें",
   "silent_payments_disclaimer": "नए पते नई पहचान नहीं हैं। यह एक अलग लेबल के साथ एक मौजूदा पहचान का पुन: उपयोग है।",
   "silent_payments_display_card": "मूक भुगतान कार्ड दिखाएं",
+  "silent_payments_logs": "मूक भुगतान लॉग",
   "silent_payments_scan_from_date": "तिथि से स्कैन करना",
   "silent_payments_scan_from_date_or_blockheight": "कृपया उस ब्लॉक ऊंचाई दर्ज करें जिसे आप आने वाले मूक भुगतान के लिए स्कैन करना शुरू करना चाहते हैं, या, इसके बजाय तारीख का उपयोग करें। आप चुन सकते हैं कि क्या वॉलेट हर ब्लॉक को स्कैन करना जारी रखता है, या केवल निर्दिष्ट ऊंचाई की जांच करता है।",
   "silent_payments_scan_from_height": "ब्लॉक ऊंचाई से स्कैन करें",
