--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -523,12 +523,12 @@
   "nano_pick_new_rep": "新しい代表者を選びます",
   "nanogpt_subtitle": "すべての最新モデル（GPT-4、Claude）。\\ nnoサブスクリプション、暗号で支払います。",
   "narrow": "狭い",
-  "new_tag": "新しい",
   "new_first_wallet_text": "暗号を安全に保つことはケーキです",
   "new_node_testing": "新しいノードのテスト",
   "new_subaddress_create": "作成する",
   "new_subaddress_label_name": "ラベル名",
   "new_subaddress_title": "新しいアドレス",
+  "new_tag": "新しい",
   "new_template": "新しいテンプレート",
   "new_transactions_notifications": "新しいトランザクションに関する通知を送信します",
   "new_wallet": "新しいウォレット",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "サイレント決済を常にスキャンします",
   "silent_payments_disclaimer": "新しいアドレスは新しいアイデンティティではありません。これは、異なるラベルを持つ既存のアイデンティティの再利用です。",
   "silent_payments_display_card": "サイレントペイメントカードを表示します",
+  "silent_payments_logs": "サイレント支払いログ",
   "silent_payments_scan_from_date": "日付からスキャンします",
   "silent_payments_scan_from_date_or_blockheight": "着信のサイレント決済のためにスキャンを開始するブロックの高さを入力するか、代わりに日付を使用してください。ウォレットがすべてのブロックをスキャンし続けるか、指定された高さのみをチェックするかどうかを選択できます。",
   "silent_payments_scan_from_height": "ブロックの高さからスキャンします",
