--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "새 대표자 선택",
   "nanogpt_subtitle": "모든 최신 모델 (GPT-4, Claude).\n구독 없이 암호화폐로 결제.",
   "narrow": "좁게",
-  "new_tag": "새로운",
   "new_first_wallet_text": "암호화폐를 안전하게 보관하는 것은 식은 죽 먹기",
   "new_node_testing": "새 노드 테스트 중",
   "new_subaddress_create": "생성",
   "new_subaddress_label_name": "라벨 이름",
   "new_subaddress_title": "새 주소",
+  "new_tag": "새로운",
   "new_template": "새 템플릿",
   "new_transactions_notifications": "새 트랜잭션 알림 보내기",
   "new_wallet": "새 지갑",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "사일런트 페이먼트 항상 스캔 설정",
   "silent_payments_disclaimer": "새 주소는 새 신원이 아닙니다. 다른 라벨이 있는 기존 신원의 재사용입니다.",
   "silent_payments_display_card": "사일런트 페이먼트 카드 표시",
+  "silent_payments_logs": "조용한 결제 로그",
   "silent_payments_scan_from_date": "날짜부터 스캔",
   "silent_payments_scan_from_date_or_blockheight": "들어오는 사일런트 페이먼트 스캔을 시작할 블록 높이를 입력하거나 대신 날짜를 사용하세요. 지갑이 모든 블록을 계속 스캔할지 또는 지정된 높이만 확인할지 선택할 수 있습니다.",
   "silent_payments_scan_from_height": "블록 높이부터 스캔",
