--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Выберите нового представителя",
   "nanogpt_subtitle": "Все новейшие модели (GPT-4, Claude). \\ Nno Подписка, платите с крипто.",
   "narrow": "Узкий",
-  "new_tag": "Новый",
   "new_first_wallet_text": "Сохранение вашего криптографии - это кусок торта",
   "new_node_testing": "Тестирование новой ноды",
   "new_subaddress_create": "Создать",
   "new_subaddress_label_name": "Имя",
   "new_subaddress_title": "Новый адрес",
+  "new_tag": "Новый",
   "new_template": "Новый шаблон",
   "new_transactions_notifications": "Отправить уведомления о новых транзакциях",
   "new_wallet": "Новый кошелёк",
@@ -866,6 +866,7 @@
   "silent_payments_always_scan": "Установить молчаливые платежи всегда сканирование",
   "silent_payments_disclaimer": "Новые адреса не являются новыми личностями. Это повторное использование существующей идентичности с другой этикеткой.",
   "silent_payments_display_card": "Показать бесшумную платежную карту",
+  "silent_payments_logs": "Молчаливые журналы платежей",
   "silent_payments_scan_from_date": "Сканирование с даты",
   "silent_payments_scan_from_date_or_blockheight": "Пожалуйста, введите высоту блока, которую вы хотите начать сканирование для входящих молчаливых платежей, или вместо этого используйте дату. Вы можете выбрать, продолжает ли кошелек сканировать каждый блок или проверять только указанную высоту.",
   "silent_payments_scan_from_height": "Сканирование с высоты блока",
