Fix Spanish translation of search field text

--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -727,8 +727,8 @@
   "search": "Búsqueda",
   "search_add_token": "Buscar/Agregar token",
   "search_category": "Categoría de búsqueda",
-  "search_currency": "Moneda de búsqueda",
-  "search_language": "Idioma de búsqueda",
+  "search_currency": "Buscar moneda",
+  "search_language": "Buscar idioma",
   "second_intro_content": "Tu Yat es una única dirección emoji única que reemplaza todas tus direcciones hexadecimales largas para todas tus monedas.",
   "second_intro_title": "Una dirección de emoji para gobernarlos a todos",
   "security": "Seguridad",
